[gd_scene load_steps=34 format=3 uid="uid://885lty3v1qbq"]

[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/shock_window.gd" id="1_h0du7"]
[ext_resource type="Texture2D" uid="uid://burmdec041k3k" path="res://assets/textures/ui/Shocks-Metal.png" id="2_37dlb"]
[ext_resource type="Texture2D" uid="uid://0g67p7r3v0vo" path="res://assets/textures/ui/All-HQ-Assets-E_Socks-metal-base.png" id="2_utnvj"]
[ext_resource type="Texture2D" uid="uid://cbgfs7wym1x5a" path="res://assets/textures/ui/All-HQ-Assets-D_0005s_0003_Shock-screen.png" id="3_wa4y3"]
[ext_resource type="Theme" uid="uid://dwneq676q3hhg" path="res://assets/fonts/label_themes.tres" id="5_0qiv1"]
[ext_resource type="FontFile" uid="uid://bt2f3flr7psn5" path="res://assets/fonts/vt323/vt323_regular.ttf" id="6_2gnt4"]
[ext_resource type="Texture2D" uid="uid://d1or1v15j7r7u" path="res://assets/textures/ui/Shocks-Button-Hole.png" id="6_021ab"]
[ext_resource type="Texture2D" uid="uid://d2mj0ht318q3j" path="res://assets/textures/ui/All-HQ-Assets-D_0004s_0022_Icon-Popularity.png" id="6_bh1n5"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/shock_title.gd" id="6_ocx2u"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/shock_text.gd" id="7_6m7uh"]
[ext_resource type="Texture2D" uid="uid://bukhhwmu7717r" path="res://assets/textures/ui/Shocks-Button-normal.png" id="7_st5u1"]
[ext_resource type="Texture2D" uid="uid://dqu1ja5c2h00" path="res://assets/textures/ui/Shocks-Button-press.png" id="8_7oeqa"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/reaction_buttons.gd" id="8_k878b"]
[ext_resource type="Texture2D" uid="uid://bamjrehqkvnrd" path="res://assets/textures/ui/Shocks-Button-hover.png" id="9_kf34e"]
[ext_resource type="Texture2D" uid="uid://b4m67oni44dpg" path="res://assets/textures/buttons/button_normal.png" id="10_hydvu"]
[ext_resource type="Texture2D" uid="uid://60dl810b25fd" path="res://assets/textures/buttons/button_press.png" id="11_are4j"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/reaction_button_1.gd" id="12_8lck6"]
[ext_resource type="Texture2D" uid="uid://cuhckno2t6g0r" path="res://assets/textures/buttons/button_hover.png" id="12_hwdxm"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/reaction_button_2.gd" id="13_kct5c"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/reaction_button_3.gd" id="14_w31rc"]
[ext_resource type="Texture2D" uid="uid://b083k6d7sugyx" path="res://assets/textures/ui/All-HQ-Assets-D_0004s_0018_Icon-Pollution-.png" id="19_ltvur"]
[ext_resource type="Texture2D" uid="uid://iaa6i5ocoaer" path="res://assets/textures/ui/All-HQ-Assets-D_0004s_0022_Icon-Popularity-down.png" id="20_0uqa3"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/continue_button.gd" id="20_ye1t7"]
[ext_resource type="Texture2D" uid="uid://bulftkbpqxib" path="res://assets/textures/ui/All-HQ-Assets-D_0004s_0024_Icon-Money.png" id="21_0kb5n"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/requirements_met_text.gd" id="21_ctbuo"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/requirements_frame.gd" id="21_y600v"]
[ext_resource type="Texture2D" uid="uid://cggi7v5bayqja" path="res://assets/textures/shocks/shock_winter.png" id="27_txidr"]
[ext_resource type="Script" path="res://src/gdscript/shocks/shock_window/shock_chip.gd" id="28_2f7im"]

[sub_resource type="Theme" id="Theme_jkqh0"]

[sub_resource type="Animation" id="Animation_ssumj"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShockWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShockWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_j3gwv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShockWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShockWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fqvj2"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShockWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShockWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gsxys"]
_data = {
"RESET": SubResource("Animation_j3gwv"),
"appear": SubResource("Animation_ssumj"),
"disappear": SubResource("Animation_fqvj2")
}

[node name="Shock" type="CanvasLayer"]
script = ExtResource("1_h0du7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 0.862745)

[node name="ShockWindow" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_utnvj")

[node name="Requirements" type="Control" parent="ShockWindow"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 0
offset_left = -155.0
offset_top = -239.0
offset_right = 237.0
offset_bottom = -20.0
script = ExtResource("21_y600v")

[node name="BackPlate" type="Sprite2D" parent="ShockWindow/Requirements"]
scale = Vector2(0.495062, 0.393414)
texture = ExtResource("2_37dlb")
centered = false

[node name="Title" type="Label" parent="ShockWindow/Requirements"]
layout_mode = 0
offset_left = 2.0
offset_top = 6.0
offset_right = 394.0
offset_bottom = 29.0
text = "SHOCK_REQUIREMENT_MET_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="requirements_met_text" type="RichTextLabel" parent="ShockWindow/Requirements"]
layout_mode = 0
offset_left = 42.0
offset_top = 59.0
offset_right = 353.0
offset_bottom = 130.0
script = ExtResource("21_ctbuo")

[node name="thumbs_up" type="Sprite2D" parent="ShockWindow/Requirements"]
position = Vector2(124, 165)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_bh1n5")

[node name="icon_money" type="Sprite2D" parent="ShockWindow/Requirements"]
position = Vector2(286, 167)
scale = Vector2(0.8, 0.8)
texture = ExtResource("21_0kb5n")

[node name="support" type="Label" parent="ShockWindow/Requirements"]
layout_mode = 0
offset_left = 70.0
offset_top = 155.0
offset_right = 110.0
offset_bottom = 178.0
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "+ 5"

[node name="money" type="Label" parent="ShockWindow/Requirements"]
layout_mode = 0
offset_left = 222.0
offset_top = 155.0
offset_right = 262.0
offset_bottom = 178.0
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "+ 50"

[node name="ColorRect" type="ColorRect" parent="ShockWindow"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.501018
anchor_top = 0.5
anchor_right = 0.501018
anchor_bottom = 0.5
offset_left = -491.0
offset_top = -448.5
offset_right = -4.0
offset_bottom = -120.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = SubResource("Theme_jkqh0")
color = Color(0.597656, 0.597656, 0.597656, 1)
metadata/_edit_use_anchors_ = true

[node name="Shocks-screen" type="Sprite2D" parent="ShockWindow/ColorRect"]
position = Vector2(248, 40)
texture = ExtResource("3_wa4y3")

[node name="Title" type="Label" parent="ShockWindow/ColorRect"]
layout_mode = 1
offset_left = 80.0
offset_top = -72.0
offset_right = 416.0
offset_bottom = -34.0
theme = ExtResource("5_0qiv1")
theme_type_variation = &"Screen"
text = "Cold Spell"
horizontal_alignment = 1
autowrap_mode = 2
script = ExtResource("6_ocx2u")

[node name="Text" type="RichTextLabel" parent="ShockWindow/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_right = 164.5
offset_bottom = 147.0
grow_horizontal = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("5_0qiv1")
theme_type_variation = &"Screen"
theme_override_colors/default_color = Color(0.219608, 0.756863, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("6_2gnt4")
theme_override_font_sizes/normal_font_size = 22
text = "The past few winters have been colder than usual, increasing the energy demand in winter by 
50 âš¡.fdjnsafdsan fd
sf
sd 
fds
fds
a"
script = ExtResource("7_6m7uh")

[node name="Reactions" type="Control" parent="ShockWindow/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 69.0
offset_right = -80.0
offset_bottom = 109.0
grow_horizontal = 2
script = ExtResource("8_k878b")

[node name="Button" type="TextureButton" parent="ShockWindow/ColorRect/Reactions" groups=["buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = 69.0
offset_right = 287.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("7_st5u1")
texture_pressed = ExtResource("8_7oeqa")
texture_hover = ExtResource("9_kf34e")
script = ExtResource("12_8lck6")

[node name="Shocks-button-hole" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button"]
show_behind_parent = true
position = Vector2(175.5, 34)
scale = Vector2(0.991979, 0.331797)
texture = ExtResource("6_021ab")

[node name="Label" type="Label" parent="ShockWindow/ColorRect/Reactions/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.182
anchor_right = 0.843
anchor_bottom = 0.753
offset_left = -4.923
offset_top = -4.014
offset_right = 16.049
offset_bottom = 0.0189972
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "frehuswilgruvhbiswedfgaq"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="thumbs_down" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button"]
position = Vector2(327.8, 34.5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("20_0uqa3")

[node name="Button2" type="TextureButton" parent="ShockWindow/ColorRect/Reactions" groups=["buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = 136.0
offset_right = 286.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("7_st5u1")
texture_pressed = ExtResource("8_7oeqa")
texture_hover = ExtResource("9_kf34e")
script = ExtResource("13_kct5c")

[node name="Shocks-button-hole" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button2"]
show_behind_parent = true
position = Vector2(176.5, 34.5)
scale = Vector2(0.991979, 0.327189)
texture = ExtResource("6_021ab")

[node name="Label" type="Label" parent="ShockWindow/ColorRect/Reactions/Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.143
anchor_right = 0.84
anchor_bottom = 0.753
offset_left = 34.647
offset_top = -0.0110006
offset_right = 9.12
offset_bottom = 0.0189972
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "fds"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="poll_icon" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button2"]
position = Vector2(330.8, 33.5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("19_ltvur")

[node name="Button3" type="TextureButton" parent="ShockWindow/ColorRect/Reactions" groups=["buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = 204.0
offset_right = 286.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("7_st5u1")
texture_pressed = ExtResource("8_7oeqa")
texture_hover = ExtResource("9_kf34e")
script = ExtResource("14_w31rc")

[node name="Shocks-button-hole" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button3"]
show_behind_parent = true
position = Vector2(176.5, 34.5)
scale = Vector2(0.991979, 0.327189)
texture = ExtResource("6_021ab")

[node name="Label" type="Label" parent="ShockWindow/ColorRect/Reactions/Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_right = 0.955
anchor_bottom = 0.74
offset_left = 40.148
offset_top = 10.0
offset_right = -39.935
offset_bottom = 0.0200005
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "fds"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="money_icon" type="Sprite2D" parent="ShockWindow/ColorRect/Reactions/Button3"]
modulate = Color(1, 0.784314, 1, 1)
position = Vector2(324.8, 34.5)
scale = Vector2(0.6, 0.6)
texture = ExtResource("21_0kb5n")

[node name="Continue" type="TextureButton" parent="ShockWindow/ColorRect" groups=["buttons"]]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -331.0
offset_top = -61.0
offset_right = -138.0
offset_bottom = 22.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("10_hydvu")
texture_pressed = ExtResource("11_are4j")
texture_hover = ExtResource("12_hwdxm")
script = ExtResource("20_ye1t7")

[node name="ShockChip" type="Sprite2D" parent="ShockWindow/ColorRect/Continue"]
position = Vector2(98, -46)
texture = ExtResource("27_txidr")
script = ExtResource("28_2f7im")

[node name="Label" type="Label" parent="ShockWindow/ColorRect/Continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0qiv1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "CONTINUE"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gsxys")
}
speed_scale = 5.0

[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button" to="ShockWindow/ColorRect/Reactions" method="_on_button1_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button" to="ShockWindow/ColorRect/Reactions/Button" method="_on_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button" to="ShockWindow/ColorRect/Continue" method="_on_reaction_button1_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button2" to="ShockWindow/ColorRect/Reactions" method="_on_button2_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button2" to="ShockWindow/ColorRect/Reactions/Button2" method="_on_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button2" to="ShockWindow/ColorRect/Continue" method="_on_reaction_button2_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button3" to="ShockWindow/ColorRect/Reactions" method="_on_button3_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button3" to="ShockWindow/ColorRect/Reactions/Button3" method="_on_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Reactions/Button3" to="ShockWindow/ColorRect/Continue" method="_on_reaction_button3_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Continue" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ShockWindow/ColorRect/Continue" to="ShockWindow/Requirements" method="_on_continue_buttton_pressed"]
